Capture lessons from the spec-restructure, intent-question, and blocking-rationale changes